chore(combobox): fix selected long text item being truncated

--- a/src/components/ComboBox/combo-box.css
+++ b/src/components/ComboBox/combo-box.css
@@ -94,7 +94,8 @@
 .combobox-input-container {
   display: flex;
   gap: var(--sgds-gap-xs);
-flex-wrap: wrap;
+  flex-wrap: wrap;
+  width: 100%;
 }
 .empty-menu {
   padding: var(--sgds-padding-sm) var(--sgds-padding-lg, 20px);
